Fix the report slightly
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1133025 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/board-reports.page
+++ b/src/main/webapp/index/community/board-reports.page
@@ -10,7 +10,7 @@ Reports submitted to the Apache Board
 
 h2. June 2011
 {code}
-Apache Karaf provides higher level features and services
+Apache Karaf provides high level features and services
 specifically designed for creating OSGi-based servers.
 
 Community
@@ -20,26 +20,29 @@ We've votes a new committer:
 
 Development
 ===========
-Apache Karaf Cellar is a clustering solution based on Hazelcast for Karaf.
-It has been added as a Karaf sub-project.
+Apache Karaf Cellar, a clustering solution based on Hazelcast for Karaf,
+has been accepted as a Karaf subproject.
 The following new releases haven been voted:
    * Apache Karaf 2.2.0
    * Apache Karaf 2.2.1
    * Apache Karaf 2.1.5
-Karaf manuals (user guide and developer guide) are generated in the build
-using Scalate.
-The website is also managed using Scalate.
+The main web site and Karaf manuals (user guide and developer guide) are generated in the build
+using Scalate.   Confluence has been kept has a pure wiki when it makes sense.
 A new logo for Karaf has been voted and is used.
 We are working on a bunch of enhancements in Karaf 3.0.0.
+
 Branding
 ========
- * trademarks: not really compliant here
- * logo: a Karaf logo is now in use
- * metadata: we have a registered doap file
+ * project naming and desc.: ok
+ * website navigation: ok
+ * trademark attributions: ok 
+ * logo: our logo does not include the TM sign
+ * metadata: ok
 
 Issues for board consideration
 ==============================
 None so far.  The community is growing and healthy.
+
 h2. December 2010
 {code}
 Apache Karaf provides higher level features and services 
