Added myself to committers
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1137134 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -24,6 +24,7 @@ h3. Committers
 | Jean-Baptiste Onofré | jbonofre | !/images/check.gif! | [Fimasys|http://www.fimasys.com] |
 | Andreas Pieber| pieber | !/images/check.gif! | |
 | James Strachan | jstrachan | | [FuseSource|http://fusesource.com/] |
+| Christian Schneider  | cschneider | | [Talend |http://www.talend.com/] |
 | Adrian Trenaman | | | [FuseSource|http://fusesource.com/] | 
 | Gert Vanthienen | gertv | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
 
@@ -31,6 +32,5 @@ h3. Contributors
 
 || Name || Organisation ||
 | [Lars Heinemann|http://lhein.blogspot.com/] | [FuseSource |http://fusesource.com/]|
-| Christian Schneider | [Talend |http://www.talend.com/] |
 | Michael Van Geertruy | |
 | Geert Schuring | |
