--- a/src/main/webapp/index/community/download/karaf-2.2.2-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.2-release.page
@@ -48,6 +48,9 @@ h3. Task
  * [KARAF-619|https://issues.apache.org/jira/browse/KARAF-619] - Add Cellar manual
  * [KARAF-620|https://issues.apache.org/jira/browse/KARAF-620] - Cellar should use the parent Karaf POM
  * [KARAF-646|https://issues.apache.org/jira/browse/KARAF-646] - Upgrade to Jetty 7.4.1.v20110513
+ * [KARAF-694|https://issues.apache.org/jira/browse/KARAF-694] - Upgrade to Pax-Logging 1.6.3
+ * [KARAF-695|https://issues.apache.org/jira/browse/KARAF-695] - Upgrade to Pax-Web 1.0.4
+
 
 h3. Test
  * [KARAF-683|https://issues.apache.org/jira/browse/KARAF-683] - use filter ${karaf.version} instead of the hard code one to fix archetypes/itests failure
