--- a/src/main/webapp/index/developers/release-guide.page
+++ b/src/main/webapp/index/developers/release-guide.page
@@ -134,6 +134,10 @@ $ mvn deploy
 mvn release:clean
 mvn release:prepare -Pmanual
 {code}
+Note: If you encounter the error message: "authorization failed: Could not authenticate to server : rejected Basic challenge" then try the following command:
+{code}
+mvn release:prepare -Pmanual -Dusername=[username] -Dpassword=[password]
+{code}
 # Stage the release for a vote
 {code}
 mvn release:perform -Pmanual
