Add subprojects section including first Cellar pages.
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1144930 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2011-07-10}
 {include:news-2011-07-03}
 {include:news-2011-05-15}
 {include:news-2011-04-30}
