--- a/src/main/webapp/index/community/news/news-2011-07-10.page
+++ b/src/main/webapp/index/community/news/news-2011-07-10.page
@@ -5,7 +5,7 @@ page_modifier: jgoodyear
 --- pipeline:conf
 h1. Jean-Baptiste Onofré posted on July 10, 2011\\Karaf Cellar 2.2.1 released
 
-The Karaf team is pleased to announce the availability of [Karaf Cellar 2.2.1|index/community/download/karaf-cellar-2.2.1-release.html].
+The Karaf team is pleased to announce the availability of [Karaf Cellar 2.2.1|index/subprojects/cellar/download.html].
 This is the first release of Apache Karaf Cellar. Karaf Cellar is clustering solution for Apache Karaf powered by Hazelcast.
 Karaf Cellar allows you to manage a cluster of Karaf instances, provising synchronisation between instances.
-For more information, please see the [release notes|index/community/download/karaf-cellar-2.2.1-release.html].
+For more information, please see the [release notes|index/subprojects/cellar/download/karaf-cellar-2.2.1-release.html].
