--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -53,7 +53,7 @@ h3. [Subprojects]
 
 - [Cellar]
 -- [Download|/index/subprojects/cellar/download.html]
--- [User Guide|http://karaf.apache.org/manual/manual/2.2.2-SNAPSHOT/user-guide/index.html]
+-- [User Guide|http://karaf.apache.org/manual/cellar/2.2.2-SNAPSHOT/user-guide/index.html]
 -- [Architecture Guide|http://karaf.apache.org/manual/cellar/2.2.2-SNAPSHOT/architecture-guide/index.html]
 
 h3. [ASF|http://www.apache.org/]
