Adding Karaf Cellar release news entry to main news page.
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1145240 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -6,6 +6,7 @@ page_modifier: gnodet
 --- pipeline:conf
 h2. News
 
+{include:news-2011-07-10}
 {include:news-2011-07-03}
 {include:news-2011-05-15}
 {include:news-2011-04-30}
