[KARAF-730] Fix the Karaf download link.
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1145247 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -9,7 +9,7 @@ h3. [Overview|Karaf Overview]
 - [Home|Index]
 - [Getting Started|http://karaf.apache.org/manual/2.2.2-SNAPSHOT/quick-start.html]
 - [FAQ]
-- [Download]
+- [Download|/index/community/download.html]
 
 h3. [Documentation]
 
