--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -1,14 +1,14 @@
 ---
 title: Documentation
-page_version: 3
+page_version: 4
 page_creator: gnodet
-page_modifier: gnodet
+page_modifier: jbonofre
 --- pipeline:conf
 h1. Documentation
 
 h2. Karaf 2.2.x manual
 
-* [Karaf Manual|http://karaf.apache.org/manual/2.2.3-SNAPSHOT/index.html]
+* [Karaf Manual|http://karaf.apache.org/manual/2.2.2/index.html]
 
 h2. Karaf 2.1.x manual
 
