--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -16,7 +16,7 @@ Here is a short list of features supported by the Karaf:
 {column}
 {center}
 *[Download Karaf 2.2.2|index/community/download.html#Karaf2.2.2]*
-[!/images/karaf-box.png|width=256!|Download]
+[!/images/karaf-box.png|width=256!|index/community/download.html#Karaf2.2.2]
 {center}
 {html}
 <script src="http://widgets.twimg.com/j/2/widget.js"></script>
