[KARAF-744] Remove fisheye repository link.
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1147775 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/developers/source.page
+++ b/src/main/webapp/index/developers/source.page
@@ -1,8 +1,8 @@
 ---
 title: Source
-page_version: 3
+page_version: 4
 page_creator: gnodet
-page_modifier: jgoodyear
+page_modifier: jbonofre
 --- pipeline:conf
 h2. Web Browsing of SVN
 
@@ -17,15 +17,6 @@ Or to browse the source tree directly:
 {panel}
 https://svn.apache.org/repos/asf/karaf/trunk/
 {panel}
-
-h3. Web Browing Using FishEye 
-
-A hearty thanks to [Atlassian|http://atlassian.com/] for providing [FishEye|http://cenqua.com/fisheye/] hosting for Karaf. Below is the URL to browse the Subversion repo via FishEye: 
-
-{panel}
-http://fisheye6.cenqua.com/browse/karaf
-{panel}
-
 
 h2. Checking out from SVN
 
