Fix broken link to quick start guide
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1148276 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -7,7 +7,7 @@ page_modifier: gnodet
 h3. [Overview|Karaf Overview]
 
 - [Home|Index]
-- [Getting Started|http://karaf.apache.org/manual/2.2.2-SNAPSHOT/quick-start.html]
+- [Getting Started|http://karaf.apache.org/manual/2.2.2/quick-start.html]
 - [FAQ]
 - [Download|/index/community/download.html]
 
