Add the Cellar release news on the index page.
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1154856 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -1,8 +1,8 @@
 ---
 title: Karaf 2.2.2
-page_version: 15
+page_version: 16
 page_creator: gnodet
-page_modifier: gnodet
+page_modifier: jbonofre
 --- pipeline:conf
 {section}
 {column}
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2011-08-08}
 {include:news-2011-07-17}
 {include:news-2011-07-10}
 {include:news-2011-07-03}
