--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -8,6 +8,22 @@ h1. Releases history
 
 {toc:minLevel=2|maxLevel=2}
 
+h2. Karaf 2.2.2
+
+[Release Notes|download/karaf-2.2.2-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-2.2.2.zip|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.2.2.tar.gz|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.2-apache-karaf-2.2.2.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-2.2.2-src.zip|http://archive.apache.org/dist/closer.cgi/karaf/2.2.2/apache-karaf-2.2.2-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.2-src.tar.gz|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.tar.gz.md5]|
+
 h2. Karaf 2.2.1
 
 [Release Notes|/index/community/download/karaf-2.2.1-release.html]
