--- a/src/main/webapp/index/community/download/karaf-2.2.3-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.3-release.page
@@ -1,8 +1,8 @@
 ---
 title: Karaf 2.2.3 Release
-page_version: 1
+page_version: 2
 page_creator: jgoodyear
-page_modifier: jgoodyear
+page_modifier: jbonofre
 --- pipeline:conf
 h2. Download
 
@@ -10,7 +10,7 @@ Download links can be found in the [Download] page.
 
 h2. Release Notes - Karaf - Version 2.2.3
 
-This release of Apache Karaf is based off of the 2.2.x series branch, representing an update to Apache Karaf 2.2.2. It contains bug fixes identified in the prior release, and introduces improvements including; Optional JDK 7 support, a spring-jms feature, and a macro allowing users to identify the contents of a specific config file. Several dependencies were also updated, bringing Jetty to version 7.4.5.v20110725, Eclispe Equinox to 3.6.2.R36x_v20110210, and Pax web to 1.0.6. For more detail please see the change log below.
+This release of Apache Karaf is based off of the 2.2.x series branch, representing an update to Apache Karaf 2.2.2. It contains bug fixes identified in prior releases and introduces improvements including: Optional JDK 7 support, a spring-jms feature, and a macro allowing users to identify the contents of a specific config file. Several dependencies were also updated, bringing Jetty to version 7.4.5.v20110725, Eclispe Equinox to 3.6.2.R36x_v20110210, Pax web to 1.0.6, and Spring 3.0.6.RELEASE. For more detail please see the change log below.
 
 h3. Bug
  * [KARAF-281|https://issues.apache.org/jira/browse/KARAF-281] - History using up arrow does not work on windows
