[KARAF-849] Release Apache Karaf 2.2.4
Updating online release notes.


git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1182684 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download/karaf-2.2.4-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.4-release.page
@@ -33,6 +33,8 @@ h3. Bug
  * [KARAF-921|https://issues.apache.org/jira/browse/KARAF-921] - maven eclipse plugin 2.8 does not work correctly with karaf
  * [KARAF-922|https://issues.apache.org/jira/browse/KARAF-922] - features-maven-plugin ignores repository tags in feature files
  * [KARAF-923|https://issues.apache.org/jira/browse/KARAF-923] - features-maven-plugin#AddFeaturesToRepoMojo does not handle spaces in repository urls well
+ * [KARAF-929|https://issues.apache.org/jira/browse/KARAF-929] - MBean bundles should be seen as system bundles
+ * [KARAF-932|https://issues.apache.org/jira/browse/KARAF-932] - ConfigMBean raise a NPE when dictionnary is null 
 
 h3. Dependency upgrade
  * [KARAF-901|https://issues.apache.org/jira/browse/KARAF-901] - Upgrade to Pax Web 1.0.7
@@ -53,6 +55,7 @@ h3. Improvement
  * [KARAF-900|https://issues.apache.org/jira/browse/KARAF-900] - Shutdown command should display the instance name
  * [KARAF-907|https://issues.apache.org/jira/browse/KARAF-907] - Include 64 bits wrapper library
  * [KARAF-925|https://issues.apache.org/jira/browse/KARAF-925] - Karaf config.properties doesn't define J2SE-1.6 and J2SE-1.7 execution environment
+ * [KARAF-930|https://issues.apache.org/jira/browse/KARAF-930] - Bundles MBean should mimic the BundleSelector like osgi:* commands
 
 h3. New Feature
  * [KARAF-541|https://issues.apache.org/jira/browse/KARAF-541] - Support JMX SSL via etc/org.apache.karaf.management.cfg
