--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -6,6 +6,7 @@ page_modifier: gnodet
 --- pipeline:conf
 h2. News
 
+{include:news-2011-10-16}
 {include:news-2011-09-01}
 {include:news-2011-08-08}
 {include:news-2011-07-17}
