Fix download link on release pages
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1186016 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download/karaf-2.2.3-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.3-release.page
@@ -1,12 +1,12 @@
 ---
 title: Karaf 2.2.3 Release
-page_version: 2
+page_version: 3
 page_creator: jgoodyear
 page_modifier: jbonofre
 --- pipeline:conf
 h2. Download
 
-Download links can be found in the [Download] page.
+Download links can be found in the [Download|/index/community/download.html] page.
 
 h2. Release Notes - Karaf - Version 2.2.3
 
