[KARAF-958] Add to website a page for each Karaf branch a table of module versions.
Initial commit includes dependency table for Karaf 2.1.x.



git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1188818 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -15,6 +15,10 @@ h2. Karaf 2.1.x manual
 * [Karaf Users' Guide|https://cwiki.apache.org/KARAF/karaf-users-guide.html]
 * [Karaf Users' Guide in one page|https://cwiki.apache.org/KARAF/karaf-users-guide-in-one-page.html]
 
+h2. Karaf Dependency Tables
+* [Karaf 2.2.x dependencies.|documentation/karaf-dependencies/karaf-deps-2.2.x.html]
+* [Karaf 2.1.x dependencies.|documentation/karaf-dependencies/karaf-deps-2.1.x.html]
+
 h2. XML Schemas
 
 * [Karaf Features v1.0.0|http://karaf.apache.org/xmlns/features/v1.0.0]
