--- a/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.2.x.page
+++ b/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.2.x.page
@@ -7,3 +7,66 @@ page_modifier: jgoodyear
 h1. Karaf Dependencies 2.2.x
 
 The below table describes the dependencies included in Apache Karaf 2.2.x builds.
+
+|| Karaf Version || 2.2.0 || 2.2.1 || 2.2.2 || 2.2.3 || 2.2.4 ||
+| aopalliance.bundle | 1.0_4 | 1.0_5 | 1.0_5 | 1.0_5 | 1.0_5 | 
+| asm.bundle | 3.3_1 | 3.3_2 | 3.3_2 | 3.3_2 | 3.3_2 |
+| cglib.bundle | 2.1_3_6 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 | 2.1_3_7 |
+| commons-beanutils.bundle | n/a | n/a | n/a | n/a | 1.8.2_2 |
+| commons-codec.bundle | 1.3_3 | 1.3_4 | 1.3_4 | 1.3_4 | 1.3_4 |
+| commons-collections.bundle | 3.2.1_1 | 3.2.1_2 | 3.2.1_2 | 3.2.1_2 | 3.2.1_2 |
+| commons-fileupload | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
+| commons-lang.bundle | 2.4_4 | 2.4_5 | 2.4_5 | 2.4_5 | 2.4_5 |
+| depends-maven-plugin | 1.0 | 1.0 | 1.0 | 1.0 | 1.2 |
+| icu4j | n/a | n/a | n/a | n/a | 4.8.1.1 | 
+| jasypt.bundle | 1.7_1 | 1.7_3 | 1.7_3 | 1.7_3 | 1.7_3 |
+| jetty | 7.2.2.v20101205 | 7.3.1.v20110307 | 7.4.2.v20110526 | 7.4.5.v20110725 | 7.4.5.v20110725 |
+| junit.bundle | 4.7_2 | 4.7_3 | 4.7_3 | 4.7_3 | 4.7_3 |
+| geronimo.activation | n/a | n/a | 1.1 | 1.1 | 1.1 |
+| geronimo.jms-spec | n/a | n/a | n/a | 1.1.1 | 1.1.1 |
+| geronimo.jpa-spec | 1.1 | 1.1 | 1.1 | 1.1 | 1.1 |
+| geronimo.jta-spec | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
+| geronimo.servlet | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 | 1.1.2 |
+| easymock | 2.4 | 2.4 | 2.4 | 2.4 | 2.4 | 
+| equinox | 3.6.0.v20100517 | 3.6.0.v20100517 | 3.6.0.v20100517 | 3.6.2.R36x_v20110210 | 3.6.2.R36x_v20110210 |
+| felix.bundlerepository | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 | 1.6.4 |
+| felix.configadmin | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 | 1.2.8 |
+| felix.fileinstall | 3.1.10 | 3.1.10 | 3.1.10 | 3.1.10 | 3.1.10 |
+| felix.framework | 3.0.8 | 3.0.9 | 3.0.9 | 3.0.9 | 3.0.9 |
+| felix.gogo | 0.6.1 | 0.6.1 | 0.6.1 | 0.6.1 | 0.10.0 |
+| felix.plugin | 2.3.4 | 2.3.4 | 2.3.4 | 2.3.4 | 2.3.4 |
+| felix.utils | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 |
+| felix.webconsole | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 | 3.1.8 |
+| felix.metatype | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 | 1.0.4 |
+| felix.eventadmin | 1.2.8 | 1.2.10 | 1.2.12 | 1.2.12 | 1.2.12 |
+| felix.eventadmin-plugin | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 |
+| felix.obr | n/a | n/a | n/a | 1.0.2 | 1.0.2 |
+| aries.application | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.blueprint | 0.3 | 0.3.1 | 0.3.1 | 0.3.1 | 0.3.1 | 
+| aries.jmx | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.jpa | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.jndi | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.proxy | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.transaction | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| aries.util | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
+| jansi | 1.4 | 1.4 | 1.4 | 1.4 | 1.4 |
+| jline | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 |
+| jsw | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 | 
+| log4j | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 | 1.2.16 |
+| maven | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 | 2.0.9 |
+| mina | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 | 2.0.1 |
+| osgi | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 | 4.2.0 |
+| pax.exam | 1.2.3 | 1.2.4 | 1.2.4 | 1.2.4 | 1.2.4 |
+| pax.logging | 1.6.0 | 1.6.2 | 1.6.3 | 1.6.3 | 1.6.3 |
+| pax.runner | 1.5.0 | 1.6.1 | 1.6.1 | 1.6.2 | 1.6.2 |
+| pax.url | 1.2.5 | 1.2.6 | 1.2.7 | 1.2.8 | 1.2.8 |
+| pax.web | 1.0.1 | 1.0.3 | 1.0.4 | 1.0.6 | 1.0.7 |
+| pax.tinybundles | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 |
+| servlet.api | 2.5 | 2.5 | 2.5 | 2.5 | 2.5 |
+| slf4j | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.1 | 1.6.1 |
+| spring.osgi | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 |
+| spring2 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 | 2.5.6.SEC02 |
+| spring | 3.0.5.RELEASE | 3.0.5.RELEASE | 3.0.5.RELEASE | 3.0.6.RELEASE | 3.0.6.RELEASE |
+| sshd | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 | 0.5.0 |
+| xbean | 3.7 | 3.7 | 3.7 | 3.7 | 3.7 |
+| javax.mail | 1.4.3 | 1.4.3 | 1.4.3 | 1.4.4 | 1.4.4 |
