--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -23,6 +23,7 @@ h2. Tutorials
 * [Karaf Tutorial Part 3 - Improving configuration editing using the OSGI Metatype Service|http://www.liquid-reality.de/x/KoBe]
 * [Combining Karaf Features, PAX URL, and Maven to deploy a plain JAR as an OSGi bundle|http://davidvaleri.wordpress.com/2010/08/13/combining-karaf-features-pax-url-and-maven-to-deploy-a-plain-jar-as-an-osgi-bundle/]
 * Blocking system.exit in OSGi on Karaf [part1|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=67] [part2|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=82] [part3|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=94] [part4|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=101]
+* [Running aspects under OSGi 4.2 with Karaf.|http://dywicki.pl/2011/11/running-aspects-under-osgi-4-2-with-karaf/]
 
 h2. Apache Karaf Cellar
 
