Updated my personal info in the team page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1209106 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -9,7 +9,7 @@ This page lists who we are. By all means add yourself to the list - lets sort it
 h3. Committers
 
 || Name || ID || PMC || Organisation ||
-| Ioannis Canellos | iocanel | !/images/check.gif! | [Upstream S.A.|http://corp.upstreamsystems.com/] |
+| [Ioannis Canellos|http://iocanel.blogspot.com] | iocanel | !/images/check.gif! | [FuseSource|http://fusesource.com/]  |
 | Hiram Chirino    | chirino | | [FuseSource|http://fusesource.com/] |
 | Chris Custine    | ccustine | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
 | [Łukasz Dywicki|http://blog.code-house.org] | | | [Code-House|http://code-house.org] | 
