Adding article to Articles on Karaf page.
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1211058 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -9,6 +9,7 @@ h2. Articles on Apache Karaf
 * [Adding custom log-appender to Pax Logging|http://nierbeck.de/cgi-bin/weblog_basic/index.php?p=201]
 * [What's new in Apache Karaf Cellar 2.2.2|http://blog.nanthrax.net/2011/08/apache-karaf-cellar-2-2-2-release]
 * [One Year of Apache Karaf|http://www.infoq.com/news/2011/06/apache-karaf]
+* [Apache Karaf Child Instances, what are they, and why should I use them?|http://icodebythesea.blogspot.com/2011/11/apache-karaf-child-instances-what-are.html]
 
 h2. Presentations
 
