--- a/src/main/webapp/index/community/download/karaf-2.2.5-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.5-release.page
@@ -29,11 +29,17 @@ h3. Bug
  * [KARAF-1065|https://issues.apache.org/jira/browse/KARAF-1065] - TextDumpProvider.createDump(DumpDestination) does not flush OutputStreamWriter
  * [KARAF-1104|https://issues.apache.org/jira/browse/KARAF-1104] - Add plexus-utils dependency to features-maven-plugin to allow it to work with Maven 2.2.x to create KARs
  * [KARAF-1105|https://issues.apache.org/jira/browse/KARAF-1105] - Fix url in Command Demo Readme file.
+ * [KARAF-1106|https://issues.apache.org/jira/browse/KARAF-1106] - Jetty feature should use ServiceMix Spec for activation
+ * [KARAF-1108|https://issues.apache.org/jira/browse/KARAF-1108] - Features should use correct start-level
+ * [KARAF-1110|https://issues.apache.org/jira/browse/KARAF-1110] - Archetypes don't work
+ * [KARAF-1111|https://issues.apache.org/jira/browse/KARAF-1111] - Add documentation about archetypes
+ * [KARAF-1114|https://issues.apache.org/jira/browse/KARAF-1114] - osgi shell blueprint bundle shouldn't use lazy default-activation
 
 h3. Dependency upgrade
  * [KARAF-997|https://issues.apache.org/jira/browse/KARAF-997] - Upgrade to Pax Web 1.0.8
  * [KARAF-998|https://issues.apache.org/jira/browse/KARAF-998] - upgrade to jetty 7.5.4.v20111024
  * [KARAF-1092|https://issues.apache.org/jira/browse/KARAF-1092] - Upgrade to Jasypt 1.8
+ * [KARAF-1107|https://issues.apache.org/jira/browse/KARAF-1107] - Karaf should use directly commons-* bundles
 
 h3. Improvement
  * [KARAF-606|https://issues.apache.org/jira/browse/KARAF-606] - JAAS: Allow LDAPLoginModule to supply role "DN" from LDAP group search
@@ -43,15 +49,19 @@ h3. Improvement
  * [KARAF-956|https://issues.apache.org/jira/browse/KARAF-956] - jaas module should throw generic FailedLoginException 
  * [KARAF-965|https://issues.apache.org/jira/browse/KARAF-965] - Allow features-maven-plugin to handle multiple versions of the same feature
  * [KARAF-968|https://issues.apache.org/jira/browse/KARAF-968] - Features file should require name attribute on features element
- * [KARAF-971|https://issues.apache.org/jira/browse/KARAF-971] - Add support for version ranges in features descriptor <repository/> element
  * [KARAF-981|https://issues.apache.org/jira/browse/KARAF-981] - Set kar as a boot feature
  * [KARAF-1013|https://issues.apache.org/jira/browse/KARAF-1013] - Less verbose in log when mistyped commands at INFO level
+ * [KARAF-1014|https://issues.apache.org/jira/browse/KARAF-1014] - Make files specified by ${includes} optional
  * [KARAF-1019|https://issues.apache.org/jira/browse/KARAF-1019] - Set java memory options only when required
  * [KARAF-1022|https://issues.apache.org/jira/browse/KARAF-1022] - java.io.tmpdir system property should use $KARAF_DATA/tmp in place of $KARAF_BASE/tmp
  * [KARAF-1032|https://issues.apache.org/jira/browse/KARAF-1032] - Text improvements to Features XSD
  * [KARAF-1041|https://issues.apache.org/jira/browse/KARAF-1041] - create-kar goal should handle configfile
  * [KARAF-1057|https://issues.apache.org/jira/browse/KARAF-1057] - Update the list of supported execution environments
+ * [KARAF-1087|https://issues.apache.org/jira/browse/KARAF-1087] - kar archetype
+ * [KARAF-1088|https://issues.apache.org/jira/browse/KARAF-1088] - assembly archetype
  * [KARAF-1091|https://issues.apache.org/jira/browse/KARAF-1091] - Upgrade maven bundle plugin to 2.3.6
+ * [KARAF-1112|https://issues.apache.org/jira/browse/KARAF-1112] - shell:sleep should be in seconds
+ * [KARAF-1115|https://issues.apache.org/jira/browse/KARAF-1115] - Add a jre.properties.cxf with all changes required to run cxf
 
 h3. New Feature
  * [KARAF-541|https://issues.apache.org/jira/browse/KARAF-541] - Support JMX SSL via etc/org.apache.karaf.management.cfg 
@@ -61,6 +71,7 @@ h3. New Feature
  * [KARAF-987|https://issues.apache.org/jira/browse/KARAF-987] - Add scp support
  * [KARAF-1029|https://issues.apache.org/jira/browse/KARAF-1029] - Add completer support on option values
  * [KARAF-1085|https://issues.apache.org/jira/browse/KARAF-1085] - Add Kar deployer demo using features-maven-plugin
+ * [KARAF-1109|https://issues.apache.org/jira/browse/KARAF-1109] - Provide archetypes for bundle, bundle-blueprint, web-bundle, war
 
 h3. Task
  * [KARAF-976|https://issues.apache.org/jira/browse/KARAF-975] - Update Apache Karaf 2.2.x documentation for Child Instances
